# hid_defender

./: .coverage  .gitignore  FEATURES.md  README.md  hid_defender.py  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py
dashboard/: app.py
dashboard/static/: dashboard.js  styles.css
dashboard/templates/: index.html  layout.html
docs/: README.md
scripts/: simulate_attacks.py
src/: __init__.py  alert_system.py  config.py  device_monitor.py  device_validator.py  keystroke_monitor.py  logging_setup.py
src/hid_defender/: __init__.py  __main__.py  alert_system.py  config.py  device_validator.py  keystroke_monitor.py  logging_setup.py
